[package]
name = "interview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
ethers = { version = "2.0.10", features = ["ws"] }
serde = { version = "1.0.189", features = ["derive"] }
futures = "0.3"
dotenv = "0.15"
chrono = "0.4.31"
